update product variant model